added a starter database - backup created with Backup Migrate module

--- a/README
+++ b/README
@@ -4,3 +4,4 @@ This is where I add more detail to my commit message.
  Comprenez-vous? Bueno.   
 
  - I included a starter database to get your started with your new Drupal 7 Business website. it's in the root folder named "a starter database". This is database backup file created with Backup Migrate module. Restore this file to see the starter business content.
+ - Contact me at katy@seascapewebdesgin.com for help in getting started installing your Drupal 7 business website. Visit seascapeweb.ca for more themes.
